nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 90
      targetPort: 80
      nodePort: 30080  # You can choose a port between 30000–32767 or let Kubernetes auto-assign by removing this line
